{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 14,
  "lineage": "84d0d722-f2d9-0e45-74e4-81da22e86fcf",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/networkInterfaces/todo-nic",
            "internal_domain_name_suffix": "1k1akiqpohzehoedgiyeiwcogd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/publicIPAddresses/todo-public-ip",
                "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/virtualNetworks/todo-vnet/subnets/todo-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "todo-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "todo-nic",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/networkInterfaces/todo-nic|/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/networkSecurityGroups/todo-nsg",
            "network_interface_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/networkInterfaces/todo-nic",
            "network_security_group_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/networkSecurityGroups/todo-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/networkSecurityGroups/todo-nsg",
            "location": "eastus",
            "name": "todo-nsg",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "todo-nsg",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3000",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/networkSecurityGroups/todo-nsg/securityRules/allow-api",
            "name": "allow-api",
            "network_security_group_name": "todo-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-api",
            "network_security_group_name": "todo-nsg",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/networkSecurityGroups/todo-nsg/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "todo-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-http",
            "network_security_group_name": "todo-nsg",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/networkSecurityGroups/todo-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "todo-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-ssh",
            "network_security_group_name": "todo-nsg",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/publicIPAddresses/todo-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.231.23",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "todo-public-ip",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "todo-public-ip",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/virtualNetworks/todo-vnet/subnets/todo-subnet",
            "name": "todo-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "virtual_network_name": "todo-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "todo-subnet",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4",
            "virtual_network_name": "todo-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2205b6da-710f-43f2-b883-323044584e33",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-7aeeb7f3d4c84226/providers/Microsoft.Network/virtualNetworks/todo-vnet",
            "location": "eastus",
            "name": "todo-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "todo-vnet",
            "resource_group_name": "kml_rg_main-7aeeb7f3d4c84226",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}